# desafio-JOTA

./: .gitignore  Readme.md  cloud_formation_deploy.yml  deploy.sh  deploy_for_test.sh  pyproject.toml  s3-bucket.yml  samconfig.toml  test.sh
.github/workflows/: deploy.yml
src/lambdas/classification/: db.py  index.py  load_model.py  loggin_config.py
src/lambdas/classification/access_layer/: dynamo_db.py  load_model.py  s3_handler.py
src/lambdas/classification/data_layer/: categories.json  classification.py  handle_message.py
src/lambdas/validation/: helpers.py  index.py  loggin_config.py  sqs.py  validation.py
workshop/: deploy.yml
