[project]
name = "classification-app"
version = "0.1.0"
description = "Desafio proposto pela JOTA"
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    "aws-lambda-powertools>=3.17.0",
    "boto3>=1.39.10",
    "botocore>=1.39.10",
    "numpy>=2.3.1",
    "pip>=25.1.1",
    "setuptools>=80.9.0",
    "spacy>=3.8.7",
    "wheel>=0.45.1",
]

